# Epi-Info-Python-Package

./: .gitignore  LICENSE  README.md  index.md  pyproject.toml  setup.py
.github/workflows/: python-build-wheel.yml  python-publish-github.yml  python-publish-pypi.yml  python-publish.yml
epi-info-python-package/: BigDouble.py  CSUtilities.py  LogisticRegression.py  RegressionUtilities.py  TablesAnalysis.py  randata.py
epiinfo/: BigDouble.py  CSUtilities.py  EICSMeans.py  EICSTables.py  EncryptionDecryptionKeys.py  Frequencies.py  ImportData.py  LineList.py  LinearRegression.py  LogBinomialRegression.py  LogisticRegression.py  Means.py  RegressionUtilities.py  ResultsFormatting.py  TablesAnalysis.py  __init__.py  randata.py
